--- a/_includes/assets/sass/partials/_components.scss
+++ b/_includes/assets/sass/partials/_components.scss
@@ -11,6 +11,7 @@ COMPONENTS
 @import "../components/page";
 @import "../components/picture";
 @import "../components/link-internal";
+@import "../components/jumbotron";
 
 // Index pages
 @import "../components/index-list";
