--- a/_includes/layouts/list.njk
+++ b/_includes/layouts/list.njk
@@ -5,7 +5,7 @@ list: true
 
 	<div class="site-content site-content--zero-top-padding content-canvas">
 		
-		<div class="site-content{% if pageClass %} {{ pageClass }} {% else %} site-content--surface-teal site-content--surface-dark{% endif %} content-canvas-item-full content-canvas">
+		<div class="site-content{% if pageClass %} {{ pageClass }} {% else %} site-content--surface-teal site-content--surface-dark{% endif %} jumbotron content-canvas-item-full content-canvas">
 
 			{% include "layouts/components/title-bar.njk" %}
 			
