--- a/_includes/assets/sass/partials/_elements.scss
+++ b/_includes/assets/sass/partials/_elements.scss
@@ -36,6 +36,8 @@ ELEMENTS
     --font-size-fluid-21: clamp(#{$h2-font-size-mobile}, 2.5vw, #{$h2-font-size});
     --font-size-fluid-3: clamp(#{$h1-font-size-mobile}, 4vw, #{$h1-font-size});
     --font-size-fluid-4: clamp(#{$h1-lg-font-size-mobile}, 6vw, #{$h1-lg-font-size});
+
+    // --gradient-6: conic-gradient(from 90deg at bottom right, black, white);
     
     font-family: $primary-font;
     font-size: $base-font-size;
