--- a/_includes/assets/sass/components/_jumbotron.scss
+++ b/_includes/assets/sass/components/_jumbotron.scss
@@ -1,6 +1,18 @@
 .jumbotron {
   :where(p) {
     font-size: var(--font-size-fluid-1);
-    line-height: 2rem;
+    line-height: var(--font-lineheight-1);
   }
+
+  :where(small) {
+    font-size: var(--font-size-fluid-01);
+    line-height: 0.5;
+  }
+
+  :where(a) {
+    margin-block:calc(var(--size-00)*-1);
+    margin-inline: calc(var(--size-1)*-1);
+    padding-block:var(--size-00);
+    padding-inline: var(--size-1)
+}
 }
