--- a/_includes/assets/sass/partials/_components.scss
+++ b/_includes/assets/sass/partials/_components.scss
@@ -9,6 +9,7 @@ COMPONENTS
 @import "../components/content_canvas";
 @import "../components/faux-block-link";
 @import "../components/page";
+@import "../components/metadata";
 @import "../components/picture";
 @import "../components/link-internal";
 @import "../components/jumbotron";
