--- a/_includes/assets/sass/components/_index-list.scss
+++ b/_includes/assets/sass/components/_index-list.scss
@@ -70,11 +70,9 @@
     height: 100%;
     overflow: hidden;
 
-    img {
-      block-size: 100%;
-      object-fit: cover;
-      object-position: center center;
-    }
+    // img {
+    //   block-size: 100%;
+    // }
   }
 }
 
