--- a/_includes/assets/sass/components/_images.scss
+++ b/_includes/assets/sass/components/_images.scss
@@ -33,3 +33,17 @@
 .image-darken-50 {
   filter: brightness(50%);
 }
+
+.image-obj-cover {
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+
+.image-obj-pos-higher {
+  object-position: center 25%;
+}
+
+.image-obj-pos-lower {
+  object-position: center 75%;
+}
