--- a/_includes/assets/sass/components/_site-header.scss
+++ b/_includes/assets/sass/components/_site-header.scss
@@ -30,6 +30,7 @@
     grid-area: logo;
     display: flex;
     justify-content: center;
+    color: var(--surface-violet);
 
     a {
       text-decoration: none;
