--- a/_includes/layouts/components/site-footer.njk
+++ b/_includes/layouts/components/site-footer.njk
@@ -20,7 +20,7 @@
 			</ul>
 		</nav>
 		<div class="footer-main__container__contact-me footer__nav footer-main__right">
-			<h3 class="h4-style">Contact me</h3>
+			<h3 class="h4-style">Follow me on:</h3>
 			<dl class="footer-main__container__contact-me__list">
 				{% for item in metadata.social_site %}
 				<dt>{{ item.name }}</dt>
