--- a/_includes/assets/sass/components/_content_canvas.scss
+++ b/_includes/assets/sass/components/_content_canvas.scss
@@ -1,6 +1,6 @@
 .content-canvas {
   display: grid;
-  column-gap: 1rem;
+  column-gap: var(--size-fluid-3);
   grid-template-columns: 
     [full-start]
       1fr
@@ -43,6 +43,7 @@
 .content-canvas-item-right {
   width: 100%;
   grid-column: main-start/main-end;
+  align-self: start;
 
   .fig-image {
     margin-top: 0;
@@ -83,6 +84,10 @@
     &.content-canvas-item-right--span-2 {
       grid-row: span 2;
 
+      &.content-canvas-span-start-content-top {
+        grid-row: 2 / span 2;
+      }
+
       + * {
         grid-column: main-start/main-mid; 
       }
@@ -90,6 +95,10 @@
 
     &.content-canvas-item-right--span-3 {
       grid-row: span 3;
+
+      &.content-canvas-span-start-content-top {
+        grid-row: 2 / span 3;
+      }
 
       + *,
       + * + * {
@@ -99,6 +108,10 @@
 
     &.content-canvas-item-right--span-4 {
       grid-row: span 4;
+
+      &.content-canvas-span-start-content-top {
+        grid-row: 2 / span 4;
+      }
 
       + *,
       + * + *,
@@ -110,6 +123,10 @@
     &.content-canvas-item-right--span-5 {
       grid-row: span 5;
 
+      &.content-canvas-span-start-content-top {
+        grid-row: 2 / span 5;
+      }
+
       + *,
       + * + *,
       + * + * + *,
@@ -117,10 +134,6 @@
         grid-column: main-start/main-mid; 
       }
     }
-  }
-
-  .content-canvas-item-wide-left {
-    grid-column: wide-start/main-mid;
   }
 
   .content-canvas-item-wide-right {
