--- a/_includes/assets/sass/components/_link-internal.scss
+++ b/_includes/assets/sass/components/_link-internal.scss
@@ -23,7 +23,7 @@
 
   h2 {
     font-size: var(--font-size-fluid-0);
-    margin-block-end: 0.5rem;
+    margin-block: 0 0.5rem;
   }
 
   .summary {
