--- a/_includes/layouts/components/index-list.njk
+++ b/_includes/layouts/components/index-list.njk
@@ -6,13 +6,21 @@
       {% if loop.index != 1 and vr == "even" %}
       {% set trash = sze.next() %}
       {% endif %}
+
       <li class="faux-block-link-parent index-list__item index-list__item-{{ loop.index }}{% if loop.first %} index-list__item-first{% endif %} index-list__item-{{ vr }}{% if loop.index != 1 %} index-list__item-{{ sze.next() }}{% endif %}{% if item.data.image.path %} index-list__item--picture{% endif %}">
         <div class="index-list__item__content">
-          {% if showTags !== false %}
-          <div class="tags">
+          {% if item.data.tags and showTags !== false %}
+          {% set itemTags = [] %}
           {%- for tag in item.data.tags %}
             {% if tag | starts_with("#", true) %}
-            <small>{{ tag }}</small>
+            {% set itemTags = (itemTags.push(tag), itemTags) %}
+            {% endif %}
+          {% endfor %}
+          <div class="metadata__tags tags">
+          {%- for tag in itemTags %}
+            <span class="metadata__tags__tag">{{ tag }}</span>
+						{% if loop.last !== true %}
+					  <span class="metadata__divider divider"></span>
             {% endif %}
           {% endfor %}
           </div>
