Update homepage for social cards

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -23,7 +23,7 @@ styles:
     <div class="home-layout__item home-layout__item--right">
       <div class="home-layout__item__inner">
         
-        <img src="/static/images/{{ image | url }}" />
+        <img src="{{ image.path | url }}" />
       </div>
     </div>
 
