--- a/_includes/layouts/components/head-social-cards.njk
+++ b/_includes/layouts/components/head-social-cards.njk
@@ -29,6 +29,6 @@
   <meta property="og:title" content="{{cardTitle}}" />
   <meta property="og:description" content="{% if excerpt %}{{excerpt}}{% else %}{{metadata.summary}}{% endif %}" />
   {% if image.social or image.path %}
-  <meta property="og:image" content="{{ metadata.url }}}{% if image.social %}{% imageData image.social %}{% else %}{% imageData image.path %}{% endif %}" />
+  <meta property="og:image" content="{{ metadata.url }}{% if image.social %}{% imageData image.social %}{% else %}{% imageData image.path %}{% endif %}" />
   {% endif %}
   <meta property="og:type" content="{{ogType}}" />
