--- a/_includes/layouts/components/head-social-cards.njk
+++ b/_includes/layouts/components/head-social-cards.njk
@@ -25,10 +25,14 @@
   {% if image.social or image.path %}
   <meta property="twitter:image" content="{{ metadata.url }}{% if image.social %}{% imageData image.social %}{% else %}{% imageData image.path %}{% endif %}" />
   {% endif %}
+  <meta property="twitter:site" content="{{ metadata.twitter }}" />
   <meta property="og:url" content="{{ absoluteUrl }}" />
   <meta property="og:title" content="{{cardTitle}}" />
   <meta property="og:description" content="{% if excerpt %}{{excerpt}}{% else %}{{metadata.summary}}{% endif %}" />
   {% if image.social or image.path %}
   <meta property="og:image" content="{{ metadata.url }}{% if image.social %}{% imageData image.social %}{% else %}{% imageData image.path %}{% endif %}" />
+    {% if image.alt %}
+  <meta property="og:image:alt" content="{{ image.alt }}">
+    {% endif %}
   {% endif %}
   <meta property="og:type" content="{{ogType}}" />
