--- a/_includes/layouts/components/head.njk
+++ b/_includes/layouts/components/head.njk
@@ -1,4 +1,8 @@
 <head>
+  <!-- Analytics & Tag Manager -->
+  {% if env.isProd %}
+    {% include "layouts/components/google-tagmanager-body.njk" %}
+  {% endif %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
