--- a/pages/robots.njk
+++ b/pages/robots.njk
@@ -1,7 +1,10 @@
 ---
 permalink: /robots.txt
+layout:
 eleventyExcludeFromCollections: true
 ---
-User-agent: *
+
 Sitemap: {{ "sitemap.xml" | url | absoluteUrl(metadata.url) }}
+
+User-agent: *
 Disallow:
