--- a/_includes/layouts/components/page-footer.njk
+++ b/_includes/layouts/components/page-footer.njk
@@ -7,7 +7,7 @@
 
       <p>Thanks for reading.</p>
       <p>If you enjoyed this story, please follow this blog for more.</p>
-      <p>You can also <a href="https://mstdn.social/@joesb">follow me on Mastodon</a>, to carry on the conversation.</p>
+      <p>You can also <a href="https://mstdn.social/@joesb" rel="noopener" target="_blank">follow me on Mastodon</a>, to carry on the conversation.</p>
       <p>Joe</p>
 
   </div>
