--- a/_includes/assets/sass/partials/_navigation.scss
+++ b/_includes/assets/sass/partials/_navigation.scss
@@ -125,9 +125,15 @@
 .footer-main__nav__list {
   display: grid;
   gap: 1rem;
-  grid-template-columns: minmax(15ch, 25ch) minmax(15ch, 25ch); 
+  grid-auto-flow: row;
+  grid-template-columns: 1fr 1fr; 
   justify-items: center;
   margin-block-end: 3rem;
+
+  >* {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 @include respond-to('medium') {
