--- a/_includes/assets/sass/partials/_navigation.scss
+++ b/_includes/assets/sass/partials/_navigation.scss
@@ -126,7 +126,7 @@
   display: grid;
   gap: 1rem;
   grid-auto-flow: row;
-  grid-template-columns: 1fr 1fr; 
+  grid-template-columns: 1fr 1fr;
   justify-items: center;
   margin-block-end: 3rem;
 
@@ -174,7 +174,7 @@
   }
 
   .footer-main__nav__list {
-    display: unset;
+    display: initial;
     margin-block-end: 0;
   }
 }
