--- a/_includes/assets/sass/components/_index-list.scss
+++ b/_includes/assets/sass/components/_index-list.scss
@@ -115,6 +115,12 @@
 
 .index-list__item-first {
   min-height: px-to-rem(450px);
+
+  :where(p) {
+    font-weight: inherit;
+    font-size: inherit;
+    line-height: inherit;
+  }
 }
 
   // .tags {
