--- a/_includes/layouts/components/index-list.njk
+++ b/_includes/layouts/components/index-list.njk
@@ -26,6 +26,11 @@
           </div>
           {% endif %}
           <h2><a href="{{ item.url | url }}"{% activepath item.url, page.url %}>{{ item.data.title }}</a></h2>
+          {% if loop.first and item.data.description %}
+          <div class="h4-style">
+          {{ item.data.description | markdown | safe }}
+          </div>
+          {% endif %}
           <div class="metadata item-meta">
             <span class="item-date">{{ item.date.toLocaleString('default', { day: 'numeric' }) }} {{ item.date.toLocaleString('default', { month: 'long' }) }}, {{ item.date.toLocaleString('default', {year: "numeric"}) }}</span>
             <span class="divider"></span>
