--- a/pages/tag-pages.njk
+++ b/pages/tag-pages.njk
@@ -1,5 +1,5 @@
 ---
-title: 'Tag Archive'
+title: 'Topic Archive'
 layout: 'base.njk'
 pagination:
   data: collections
@@ -7,12 +7,15 @@ pagination:
   alias: tag
   filter: ['all', 'nav', 'rss', '#reading', '#writing', '#thinking', 'Reading', 'Thinking', 'promotedContent', 'footerNav', 'footerSecondaryNav', 'mainNav', 'allContent', 'reading', 'writing', 'thinking']
 permalink: '/tag/{{ tag | slug }}/'
+showPaginationNav: false
 ---
 
-<h2>Tagged ‘{{ tag }}’</h2>
+<h2>Posts on ‘{{ tag }}’</h2>
 
 {% set items = collections[ tag ] %}
 
+<div class="content-canvas-item-wide">
 {% include "layouts/components/index-list.njk" %}
+</div>
 
 <p>See <a href="/tag/">all tags</a>.</p>
