--- a/pages/tag-pages.njk
+++ b/pages/tag-pages.njk
@@ -18,4 +18,7 @@ showPaginationNav: false
 {% include "layouts/components/index-list.njk" %}
 </div>
 
-<p>See <a href="/tag/">all tags</a>.</p>
+
+<div class="site-content">
+  <p>See <a href="/tag/">all topics</a>.</p>
+</div>
