Add Medium to footer follows

--- a/_includes/assets/sass/components/_site-footer.scss
+++ b/_includes/assets/sass/components/_site-footer.scss
@@ -111,4 +111,10 @@
       mask-image: url("/static/images/icons/soundcloud.svg");
     }
   }
+
+  &.medium {
+    &::after {
+      mask-image: url("/static/images/icons/medium.svg");
+    }
+  }
 }
