--- a/_includes/assets/sass/components/_index-list.scss
+++ b/_includes/assets/sass/components/_index-list.scss
@@ -12,10 +12,7 @@
     margin: 0;
     padding: 1rem;
     position: relative;
-    background-image: var(--gradient-6);
-    border-width: 1px;
-    border-style: solid;
-    border-color: lighten($text-1, 50%);
+    // background-image: var(--gradient-6);
     max-inline-size: unset;
 
     &:first-child {
@@ -38,15 +35,20 @@
   grid-column: span 5;
   min-height: px-to-rem(150px);
   display: flex;
-  color: var(--surface-2);
+  justify-content: center;
+  align-items: center;
+  border-width: 1px;
+  border-style: solid;
+  border-color: lighten($text-1, 80%);
+  // color: var(--surface-2);
 
-  a {
-    color: var(--surface-1);
+  // a {
+  //   color: var(--surface-1);
 
-    &:visited {
-      color: var(--surface-1);
-    }
-  }
+  //   &:visited {
+  //     color: var(--surface-1);
+  //   }
+  // }
 
   .divider {
     background-color: var(--surface-2);
@@ -55,7 +57,7 @@
   .index-list__item__content {
     position: relative;
     z-index: 1;
-    align-self: flex-end;
+    // align-self: flex-end;
   }
 
   h2 {
@@ -77,7 +79,10 @@
 }
 
 .index-list__item--picture {
+  justify-content: flex-start;
+  align-items: flex-end;
   color: var(--surface-2);
+  border-color: lighten($text-1, 50%);
 
   a {
     color: var(--surface-2);
